--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="css/accueil.css" rel="stylesheet">
+    <link href="public/css/accueil.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap"
@@ -16,7 +16,7 @@
 <body>
     <section class="Accueil">
         <h1>Bienvenue</h1>
-        <img src="img/doctowebline-high-resolution-logo-color-on-transparent-background.png" class="logo" alt="Doctowebline Logo">
+        <img src="public/img/doctowebline-high-resolution-logo-color-on-transparent-background.png" class="logo" alt="Doctowebline Logo">
         <button id="btn-enter">Entrer</button>
     </section>
 
